web-infras/parser/tests/fixtures/babel/es2017/async-functions/invalid-escape-export-async-function/output.txt
[SyntaxError]: 'import' and 'export' may appear only with 'sourceType: "module"' (1,1)
1|export \u0061sync function y() { await x }
 |^
